Fixed none of our listings are working on mobile issue (#44)
* 4727 - Fixed messages is broken on live site issue

* 4727 - Fixed messages is broken on live site issue

* Fixed none of our listings are working on mobile issue

--- a/themes/listeo-child/style.css
+++ b/themes/listeo-child/style.css
@@ -2384,6 +2384,10 @@ border: 0px solid #dbdbdb;
     border-bottom-right-radius:10px;
 }
 
+#breadcrumbs{
+    top: 25% !important;
+}
+
 @media (max-width: 768px){ 
     #listeo_gallery_desktop{
         display: none !important;
@@ -2440,14 +2444,14 @@ border: 0px solid #dbdbdb;
         padding-left: 50px;
         padding-right: 10px;        
     }
-    .listeo_gallery_img_1, .listeo_gallery_img_2{
+    /*.listeo_gallery_img_1, .listeo_gallery_img_2{
         display: none;
     }
     .listeo_gallery_img_3 img, .listeo_gallery_img_4 img{
         height: 510px;
         border-top-right-radius:10px;
         border-bottom-right-radius:10px;
-    }
+    }*/
     .listeo_gallery_show_all_btn_min{
         position: absolute;
         right: 24px;
